[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Characters/Diggo/DiggosAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Utils/CharacterMovement.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Utils/InteractButtons.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Scenes/Characters/Diggo.gd" type="Script" id=23]
[ext_resource path="res://Scripts/Scenes/Characters/DigHitbox.gd" type="Script" id=24]
[ext_resource path="res://Scenes/UI/Menus/CircleSelect.tscn" type="PackedScene" id=25]

[sub_resource type="CapsuleShape2D" id=1]
radius = 184.417
height = 123.907

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 198.486
height = 118.289

[node name="DiggoKinematic" type="KinematicBody2D"]
z_index = 1
collision_mask = 2
script = ExtResource( 23 )

[node name="DiggosAnimations" parent="." instance=ExtResource( 1 )]

[node name="CharacterMovement" parent="." instance=ExtResource( 2 )]
ELEMENT = NodePath("..")

[node name="InteractButtons" parent="." instance=ExtResource( 4 )]
INTERACT_AREA = NodePath("../InteractArea")
CIRCLE_SELECT_MENU = NodePath("../CircleSelect")

[node name="DiggoCollision" type="CollisionShape2D" parent="."]
position = Vector2( -26, 0 )
rotation = 1.5708
scale = Vector2( 0.488614, 0.562162 )
shape = SubResource( 1 )

[node name="DigHitbox" type="Area2D" parent="." groups=[
"Terraform",
]]
collision_mask = 2
script = ExtResource( 24 )

[node name="DigCollision" type="CollisionShape2D" parent="DigHitbox" groups=[
"Terraform",
]]
position = Vector2( 250, 0 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )
disabled = true

[node name="DigTest" type="Area2D" parent="."]

[node name="DigTestCollision" type="CollisionShape2D" parent="DigTest"]
position = Vector2( 250, 0 )
scale = Vector2( 0.65, 0.65 )
shape = SubResource( 3 )

[node name="InteractArea" type="Area2D" parent="."]

[node name="InteractCollision" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( -27, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.6 )
shape = SubResource( 4 )

[node name="CheckDigTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CircleSelect" parent="." instance=ExtResource( 25 )]
margin_right = 1.7962
[connection signal="timeout" from="CheckDigTimer" to="." method="_on_CheckDigTimer_timeout"]
